--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -29,7 +29,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:text="Route end time"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/white"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="@+id/end_time_tv"
             app:layout_constraintTop_toBottomOf="@+id/end_time_tv"/>
 
@@ -54,9 +54,9 @@
 
         <ImageView
             android:id="@+id/menu_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/menu_btn_ic"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            app:srcCompat="@drawable/ic_action_menu"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -75,8 +75,8 @@
             android:id="@+id/address_input_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:textColor="@color/colorPrimaryDark"
+            android:padding="15dp"
+            android:textColor="@color/white"
             android:background="@drawable/menu_buttons"
             android:text="Add address"
             app:layout_constraintBottom_toTopOf="@+id/get_user_location_btn"
@@ -87,9 +87,9 @@
             android:id="@+id/get_user_location_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="15dp"
             android:background="@drawable/menu_buttons"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/white"
             android:text="Refresh location"
             app:layout_constraintBottom_toTopOf="@+id/refresh_info_btn"
             app:layout_constraintStart_toStartOf="parent"
@@ -99,9 +99,9 @@
             android:id="@+id/refresh_info_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="15dp"
             android:background="@drawable/menu_buttons"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/white"
             android:text="Refresh route info"
             app:layout_constraintBottom_toTopOf="@+id/log_out_btn"
             app:layout_constraintEnd_toEndOf="parent"
@@ -111,9 +111,9 @@
             android:id="@+id/log_out_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/white"
             android:text="Log out"
-            android:padding="10dp"
+            android:padding="15dp"
             android:background="@drawable/menu_buttons"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -147,7 +147,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:menu="@menu/nav_menu"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorAccentDefault"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
