--- a/app/src/main/res/drawable/buttons_style.xml
+++ b/app/src/main/res/drawable/buttons_style.xml
@@ -11,7 +11,7 @@
         <shape android:shape="rectangle"  >
             <corners android:radius="3dip" />
             <stroke android:width="1dip" android:color="@color/colorAccent" />
-            <gradient android:angle="-90" android:startColor="@color/colorPrimary" android:endColor="@color/colorPrimary" />
+            <gradient android:angle="-90" android:startColor="@color/colorAccentDefault" android:endColor="@color/colorAccentDefault" />
         </shape>
     </item>
 </selector>
