--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -67,7 +67,7 @@
         android:id="@+id/menu_wrapper"
         android:layout_width="170dp"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu_btn_wrapper">
 
@@ -81,7 +81,8 @@
             android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/get_user_location_btn"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/get_user_location_btn"
@@ -93,7 +94,8 @@
             android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/refresh_info_btn"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/address_input_btn" />
 
         <TextView
             android:id="@+id/refresh_info_btn"
@@ -103,9 +105,10 @@
             android:padding="15dp"
             android:text="Refresh route info"
             android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/show_delivered_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="97dp" />
+            app:layout_constraintTop_toBottomOf="@+id/get_user_location_btn" />
 
         <TextView
             android:id="@+id/show_delivered_btn"
@@ -114,6 +117,7 @@
             android:background="@drawable/menu_buttons"
             android:padding="15dp"
             android:text="Show delivered"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/log_out_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -129,7 +133,8 @@
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/show_delivered_btn" />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.v4.view.ViewPager
