--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -82,7 +82,7 @@
             app:layout_constraintBottom_toTopOf="@+id/get_user_location_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/get_user_location_btn"
@@ -95,7 +95,7 @@
             app:layout_constraintBottom_toTopOf="@+id/refresh_info_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/address_input_btn" />
+            app:layout_constraintTop_toBottomOf="@+id/address_input_btn"/>
 
         <TextView
             android:id="@+id/refresh_info_btn"
@@ -105,23 +105,10 @@
             android:padding="15dp"
             android:text="Refresh route info"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toTopOf="@+id/show_delivered_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/get_user_location_btn" />
-
-        <TextView
-            android:id="@+id/show_delivered_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/menu_buttons"
-            android:padding="15dp"
-            android:text="Show delivered"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toTopOf="@+id/log_out_btn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/refresh_info_btn" />
+            app:layout_constraintTop_toBottomOf="@+id/get_user_location_btn"
+            app:layout_constraintBottom_toTopOf="@+id/log_out_btn"/>
 
         <TextView
             android:id="@+id/log_out_btn"
@@ -134,7 +121,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/show_delivered_btn" />
+            />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.v4.view.ViewPager
